fix bug get json client

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-;PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = modwifi
 framework = arduino
-
+lib_deps = 
+	khoih-prog/ESP_WiFiManager@^1.1.2
+	tzapu/WifiManager@^0.15.0
